compiler-core/src/parse/snapshots/gleam_core__parse__tests__reserved_test.snap
---
source: compiler-core/src/parse/tests.rs
expression: const test = 1
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ const test = 1
  │       ^^^^ This is a reserved word

Hint: I was expecting to see a name here.
